@@ -1,3 +1,8 @@
+2006-01-20  Miklos Szeredi <miklos@szeredi.hu>
+
+	* fuse_opt: add new helper constants FUSE_OPT_KEY_KEEP and
+	FUSE_OPT_KEY_DISCARD
+
 2006-01-19  Miklos Szeredi <miklos@szeredi.hu>
 
 	* lib: if "fsname=" option was given, pass it to fusermount
